# git-curso-paralelismo

./: README.md
AULAS/task/: cascon-cdp2018.pptx
tarefas-google-drive/T10/: alice30_x_wizoz10.txt  analisador.scala  enunc.tex
tarefas-google-drive/T11/: setenv.sh
tarefas-google-drive/T11/parboil/benchmarks/bfs/: CMakeLists.txt  main.cc
tarefas-google-drive/T11/parboil/benchmarks/cutcp/: CMakeLists.txt  atom.h  cutcpu.c  cutoff.h  excl.c  main.c  output.c  output.h  readatom.c
tarefas-google-drive/T11/parboil/benchmarks/histo/: CMakeLists.txt  bmp.h  main.c  util.c  util.h
tarefas-google-drive/T11/parboil/common/src/: CMakeLists.txt  parboil.c
tarefas-google-drive/T12/: setenv.sh
tarefas-google-drive/T12/apps/: CMakeCommon.cmake
tarefas-google-drive/T12/apps/loop-A/: CMakeLists.txt  bitarray.c  bitcnt_1.c  bitcnt_3.c  bitcnt_4.c  bitcnts.c  bitfiles.c  bitops.h  bitstrng.c  conio.h  extkword.h  loop-wrap.c  sniptype.h
tarefas-google-drive/T12/apps/ray-rot/: CMakeLists.txt  ifiles.txt  image.cpp  ofiles.txt  program.cpp  ray_engine.cpp  rotation_engine.cpp  rotation_engine.h  run.sh
tarefas-google-drive/T13/: enunc.tex
tarefas-google-drive/T14/: Copy of enunc.aux  Copy of enunc.out  Copy of enunc.tex  Copy of enunciado.odt  arq1.in  arq2.in  arq3.in  arq4.in  arq6.in  convolution1D_serial.cu
tarefas-google-drive/T2/: T2_ser.c
tarefas-google-drive/T3/: arq4.in  arq5.in  arq6.in  hist.c
tarefas-google-drive/T4/: arq4.in  arq6.in
tarefas-google-drive/T8/: histogram.c
